--- a/meet-your-star-wars-lover/tests/love.html
+++ b/meet-your-star-wars-lover/tests/love.html
@@ -23,7 +23,7 @@
             let nameLoverTwo = document.getElementById("inputLoverTwo").value
             let loveRate = 0
 
-            loveRate = Math.round(Math.random() * 100) + 1
+            loveRate = Math.round(Math.random() * 100)
 
             resultField.innerHTML = `${nameLoverOne}, votre taux d'amour avec ${nameLoverTwo} s'élève à ${loveRate} %.`
             interpreteResult(loveRate)
